# Cura-OctoPrintPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  DiscoverOctoPrintAction.py  DiscoverOctoPrintAction.qml  MonitorItem.qml  MonitorItem3x.qml  MonitorItem4x.qml  NetworkMJPGImage.py  NetworkReplyTimeout.py  OctoPrintComponents.qml  OctoPrintOutputController.py  OctoPrintOutputDevice.py  OctoPrintOutputDevicePlugin.py  OctoPrintPowerPlugins.py  PowerPlugins.py  README.md  UploadOptions.py  WebcamsModel.py  __init__.py  plugin.json  zeroconf.py
.github/: FUNDING.yml
.github/workflows/: create_tagged_release_with_packages.yaml  package.json  translation.yaml  translation.yml  update_pot.yaml
i18n/: octoprint.pot
i18n/cs_CZ/: octoprint.po
i18n/cs_CZ/LC_MESSAGES/: octoprint.mo
i18n/de_DE/: octoprint.po
i18n/de_DE/LC_MESSAGES/: octoprint.mo
i18n/it_IT/: octoprint.po
i18n/it_IT/LC_MESSAGES/: octoprint.mo
i18n/ru_RU/: octoprint.po
i18n/ru_RU/LC_MESSAGES/: octoprint.mo
qml/: DiscoverOctoPrintAction.qml  ManualInstanceDialog.qml  MonitorItem.qml  MonitorItem3x.qml  MonitorItem4x.qml  OctoPrintComponents.qml  UploadOptions.qml
qml_controls1/: DiscoverOctoPrintAction.qml  ManualInstanceDialog.qml  MonitorItem4x.qml  OctoPrintComponents.qml
qml_qt5/: DiscoverOctoPrintAction.qml  ManualInstanceDialog.qml  MonitorItem3x.qml  OctoPrintComponents.qml  UploadOptions.qml
